--- a/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
+++ b/main/http_server/axe-os/src/app/pages/swarm/swarm.component.scss
@@ -11,6 +11,7 @@ table {
 }
 th {
   padding-top: 5px;
+  /*padding-bottom: 5px;*/
     text-align: center;
     background-color: var(--button-filled-info-background-color);
 }
@@ -72,12 +73,28 @@ td:nth-child(11) button {
   margin: 0px;
   padding: 0px;
   font-size:75%;
-  text-align: center;
-  min-width: 70px;
+  /*text-align: center;*/
+  min-width: 80px;
   background-color: var(--button-filled-info-background-color);
   color: var(--button-filled-primary-text-color);
+  position: relative;
+  top: -4px;
+/*
+  position: relative;
+  top: -24px;
+*/
+}
+/*
+.dual-pool-header td:nth-child(2) {
+  text-align:left;
+  padding-left: 5px;
 }
 
+.dual-pool-header td:nth-child(3) {
+  text-align:right;
+  padding-right: 5px;
+}
+*/
 .base-row td:nth-child(12), .base-row td:nth-child(11), .base-row td:nth-child(10) {
   width: 50px;
 }
